# agent-arena

./: .gitignore  pyproject.toml
data/runs/: .gitignore
src/agent_arena/: cli.py
src/agent_arena/agents/: base.py  claude.py  models.py  prompts.py  rule_based.py
src/agent_arena/analysis/: plots.py  stats.py
src/agent_arena/games/: base.py  prisoners_dilemma.py
src/agent_arena/logging/: result.py  tournament.py
src/agent_arena/tournaments/: presets.py  round_robin.py  runner.py
tests/: test_prisoners_dilemma.py  test_rule_based.py  test_runner.py
