[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-arena"
version = "0.1.0"
description = "LLM game theory tournament lab"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.40.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "matplotlib>=3.7",
    "plotly>=5.0",
    "typer>=0.12",
    "python-dotenv>=1.0",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "pandas-stubs>=2.0",
]

[project.scripts]
arena = "agent_arena.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_arena"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
strict = true
python_version = "3.12"

[[tool.mypy.overrides]]
module = ["plotly.*", "pandas.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
